--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,11 +1,11 @@
-footer {
+footer{
     background-color: white;
     height: 60px;
     width: 100%;
-    align-items: center;
-    border-top: 1px #CCCCCC;
+    border-top: 1px #CCCCCC solid;
+    position: fixed;
     bottom: 0;
-    position: absolute;
-    justify-content: center;
     display: flex;
-}
+    justify-content: center;
+    align-items: center;
+}   
