--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,6 +2,7 @@ header {
     background-color: white;
     height: 70px;
     width: 100%;
-    background: url('/images/logo.png') 20px center no-repeat;
-    border-bottom: 1px #CCCCCC;
+    margin-left: 20px;
+    background: url('/images/logo.png') no-repeat;
+    border-bottom: 1px #CCCCCC solid;
 }
