--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,22 +1,23 @@
-.container .filters {
+.filters {
     background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid#DDDDDD;
     border-radius: 4px;
 }
-.container .filters button {
+.filters button {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
     width: 20%;
     border-radius: 4px;
-    margin: 11px 30px 11px 0;
+    margin: 10px 30px;
     text-align: center;
     border: none;
     float: right;
+    opacity: 1;
 }
-.container .filters button:hover {
+.filters button:hover {
     opacity: 0.9;
 }
